# MolBench

./: .gitignore  LICENSE  MANIFEST.in  README.md  config.yaml  pyproject.toml  requirements.txt  setup.py
docs/: api.md  tutorial.md
molbench/: __init__.py  __main__.py  cli.py  run_from_config.py  runner.py
molbench/.github/: copilot-instructions.md
molbench/configs/: __init__.py  cfg_generator.py  cfg_parser.py
molbench/configs/templates/: advanced.yaml  basic.yaml
molbench/core/: __init__.py  runner.py  runner_engine.py
molbench/core/adapters/: 3D_adapter.py  __init__.py  base.py  custom_model.py  gnn_adapter.py  registry.py  sklearn_adapter.py  smiles_to_graph.py  text_adapter.py
molbench/core/evaluation/: __init__.py  heatmap.py  metrics.py  visualization.py
molbench/core/featurizers/: __init__.py  base.py  coulomb_matrix.py  ecfp.py  maccs.py  mol2vec.py  pcfp.py  rdkit2d.py
molbench/core/hyper_parameters/: configs_manager.py  user_guide.py
molbench/core/hyper_parameters/binary_models/: ada_boost_classifier.json  bagging_classifier.json  bernoulli_nb.json  decision_tree_classifier.json  extra_tree_classifier.json  gaussian_nb.json  gaussian_process_classifier.json  gradient_boosting_classifier.json  kneighbors_classifier.json  lgbm_classifier.json  linear_discriminant_analysis.json  linear_svc.json  logistic_regression_cv.json  mlp_classifier.json  multinomial_nb.json  nu_svc.json  pac.json  perceptron.json  qda.json  random_forest_classifier.json  sgd_classifier.json  svc.json  xgb_classifier.json
molbench/core/hyper_parameters/new/: ChemBERTa2-MLM.json  ChemBERTa2-MTR.json  DeepChem-TextCNN.json  GAT.json  GCN.json  GIN.json  GP-MoLformer.json  GraphConv.json  GraphSAGE.json  MPNN.json  MoLFormer.json  SchNet.json  SciBERT.json  TransformerConv.json
molbench/core/hyper_parameters/regression_models/: ada_boost_regressor.json  ard_regreesion.json  bagging_regressor.json  bayesian_ridge.json  decision_tree_regressor.json  elastic_net.json  elastic_net_cv.json  extra_tree_regressor.json  gaussian_process_regressor.json  gradient_boosting_regressor.json  huber_regressor.json  kernel_ridge.json  kneighbors_regressor.json  lars.json  lars_cv.json  lasso.json  lasso_cv.json  lasso_lars.json  lasso_lars_cv.json  lasso_lars_ic.json  lgbm_regressor.json  linear_regression.json  linear_svr.json  mlp_regressor.json  nu_svr.json  omp.json  par.json  pls_regression.json  ransac_regressor.json  (+7 more)
molbench/core/utils/: __init__.py  bayesian_opt.py  cache.py  error_handler.py  logger.py  model_register.py  model_selector.py  train.py
tests/: __init__.py
(+7 files in other folders)
