[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "molbench"
version = "0.1.0"
description = "A unified benchmarking framework for molecular property prediction"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "MolBench Contributors", email = "your-email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = [
    # 核心科学计算
    "numpy==1.26.4",
    "pandas==2.3.0",
    "scipy>=1.10.0",
    "scikit-learn==1.7.1",
    "matplotlib==3.10.3",
    "seaborn==0.13.2",

    # 深度学习基础 (PyTorch 和 PyG)
    "torch==2.9.1",
    "torch-geometric==2.7.0",
    "torch-scatter>=2.1.2",
    "torch-sparse>=0.6.18",
    "pytorch-lightning==2.6.1",
    "torchmetrics==1.8.2",

    # HuggingFace 生态
    "transformers==4.57.6",
    "tokenizers==0.22.2",
    "datasets==4.7.0",
    "huggingface_hub==0.36.2",
    "safetensors==0.7.0",
    "accelerate==1.13.0",

    # 化学相关
    "rdkit-pypi==2025.3.3",
    "deepchem>=2.8.0",
    "nltk==3.9.3",

    # 优化工具
    "bayesian-optimization==3.1.0",
    "scikit-optimize==0.10.2",
    "optuna==4.7.0",

    # 实用工具
    "tqdm==4.67.1",
    "joblib==1.5.1",
    "pyyaml==6.0.2",
    "omegaconf==2.3.0",
    "hydra-core==1.3.2",
    "colorlog==6.10.1",

    # ONNX (可选)
    "onnx==1.20.1",
    "onnxruntime==1.24.3",
    "optimum==2.1.0",
    "optimum-onnx==0.1.0",
]

[project.optional-dependencies]
gpu = [
    "torch==2.9.1 --index-url https://download.pytorch.org/whl/cu118",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/hfsy0503/molbench"
Repository = "https://github.com/hfsy0503/molbench"
Documentation = "https://github.com/hfsy0503/molbench/blob/main/README.md"
Issues = "https://github.com/hfsy0503/molbench/issues"

[project.scripts]
molbench = "molbench.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["molbench*"]

[tool.setuptools.package-data]
molbench = ["**/*.yaml", "**/*.json", "**/*.csv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"